[package]
name = "icoextract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
utf16string = "0.2.0"
either = "1.1.0"
libc = "0.2.121"

[lib]
crate-type = [ "cdylib", "staticlib" ]