[package]
name = "icoextract"
version = "0.1.0"
edition = "2021"
description = "Simple library to extract icons from a Windows executable (PE32 and PE32+). Very barebones, do not use in anything important yet."
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
utf16string = "0.2.0"
either = "1.1.0"
libc = "0.2.121"

[lib]
crate-type = [ "dylib", "rlib" ]
